# llm-portfolio-optimization

./: .gitignore  README.md  REPLICATION.md  pyproject.toml
configs/: full.toml  msci.toml  nyse.toml  nyse_scale_5.toml  sp500.toml
src/portfolio_bench/: __init__.py  cli.py  config.py
src/portfolio_bench/backtest/: __init__.py  backtester.py  bootstrap.py  metrics.py  pairwise.py  rolling.py
src/portfolio_bench/data/: __init__.py  load.py  olps_download.py
src/portfolio_bench/interpretability/: __init__.py  analyzer.py  token_importance.py  visualization.py
src/portfolio_bench/methods/: __init__.py  base.py
src/portfolio_bench/methods/llm/: __init__.py  ollama_client.py  policies.py  prompts.py
src/portfolio_bench/methods/operations_research/: __init__.py  cvar.py  hrp.py  mean_variance.py  wasserstein_dro.py
src/portfolio_bench/utils/: __init__.py  fetch_references.py
